# odf-client

./: .gitignore  CHANGELOG.md  README.md  odf-client.cabal
app/: Database.hs  GenerateStats.hs  Main.hs
etc/: odf-client.service
src/: App.hs  Database.hs  Files.hs  ODFHeader.hs  Options.hs  Parse.hs  ProcessMessages.hs  Processor.hs  Receiver.hs
