cabal-version:      3.6
name:               odf-client
version:            0.3

synopsis: A sample ODF client

description:
  An ODF client showing basic well-behaved functionality:

  * Decouples message receiving and processing

  * Receiver writes a message to disk and answers to the sender immediately
    afterwards.
    This ensures that the sender knows the latest message we have
    acknowledged while ensuring that this message is safe and won't be lost
    in case the client crashes

  * Processing of received messages is completely independent and can have
    optimizations, for example, not processing a message version if a newer
    version has already been received

-- license:
author:             georgh
maintainer:         ostankino.tower@gmail.com

-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-all
  build-depends:    base ^>=4.15.0.0
                  , optparse-applicative ^>=0.16.1.0
                  , rio ^>=0.1.21.0
                  , primitive ^>=0.7.2
                  , warp ^>=3.3.15
                  , wai ^>=3.2.3
                  , wai-conduit ^>=3.0.0.4
                  , http-types  ^>=0.12
                  , conduit ^>=1.3.4.1
                  , conduit-extra ^>= 1.3.5
                  , attoparsec ^>= 0.14.1
                    
  default-language: Haskell2010

  -- Recommendations for GHC options 2021-05-03
  -- https://hackage.haskell.org/package/rio
  ghc-options:      -Wall
                    -Wincomplete-record-updates
                    -Wnoncanonical-monad-instances
                    -Wcpp-undef
                    -Wincomplete-uni-patterns
                    -Widentities
                    -Wpartial-fields
                    -Wredundant-constraints
                    -Wmissing-export-lists

  -- Recommnedations for default extensions 2021-05-03
  -- https://hackage.haskell.org/package/rio
  default-extensions: NoImplicitPrelude

executable odf-client
  import:           common-all
  main-is:          Main.hs 
  hs-source-dirs:   app, src
  ghc-options:      -threaded
  other-modules:    Paths_odf_client
                  , Options
                  , Receiver
                  , Files
                  , Processor
                  , Parse
                  , ODFHeader

executable odf-stats
  import:           common-all
  main-is:          GenerateStats.hs
  hs-source-dirs:   app, src
  ghc-options:      -threaded -main-is GenerateStats
  other-modules:    Paths_odf_client
                  , Options
                  , Files
                  , Processor
                  , Parse
                  , ODFHeader

test-suite odf-test
  import:           common-all
  type:             exitcode-stdio-1.0
  main-is:          FilesSpec.hs 
  hs-source-dirs:   test, src
  other-modules:    Files
  build-depends:    hspec ^>= 2.7.0

