cabal-version:      3.6
name:               odf-client
version:            0.3

synopsis: A sample ODF client

description:
  An ODF client showing basic well-behaved functionality:

  * Decouples message receiving and processing

  * Receiver writes a message to disk and answers to the sender immediately
    afterwards.
    This ensures that the sender knows the latest message we have
    acknowledged while ensuring that this message is safe and won't be lost
    in case the client crashes

  * Processing of received messages is completely independent and can have
    optimizations, for example, not processing a message version if a newer
    version has already been received

-- license:
author:             georgh
maintainer:         ostankino.tower@gmail.com

-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-all
  build-depends:    base
                  , optparse-applicative
                  , rio
                  , primitive
                  , warp
                  , wai
                  , wai-conduit
                  , http-types
                  , conduit
                  , conduit-extra
                  , attoparsec
                  , co-log
                  , mtl
                    
  default-language: Haskell2010

  -- Recommendations for GHC options 2021-05-03
  -- https://hackage.haskell.org/package/rio
  ghc-options:      -Wall
                    -Wincomplete-record-updates
                    -Wnoncanonical-monad-instances
                    -Wcpp-undef
                    -Wincomplete-uni-patterns
                    -Widentities
                    -Wpartial-fields
                    -Wredundant-constraints
                    -Wmissing-export-lists

  -- Recommnedations for default extensions 2021-05-03
  -- https://hackage.haskell.org/package/rio
  default-extensions: NoImplicitPrelude

executable odf-client
  import:           common-all
  main-is:          Main.hs 
  hs-source-dirs:   app, src
  ghc-options:      -threaded
  other-modules:    Paths_odf_client
                  , Options
                  , Receiver
                  , Files
                  , Processor
                  , Parse
                  , ODFHeader
                  , App

executable odf-stats
  import:           common-all
  main-is:          GenerateStats.hs
  hs-source-dirs:   app, src
  ghc-options:      -threaded -main-is GenerateStats
  other-modules:    Paths_odf_client
                  , Options
                  , Files
                  , Processor
                  , Parse
                  , ODFHeader
                  , App

test-suite odf-test
  import:           common-all
  type:             exitcode-stdio-1.0
  main-is:          FilesSpec.hs 
  hs-source-dirs:   test, src
  other-modules:    Files
  build-depends:    hspec ^>= 2.7.0

